--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<html><head>
+    <title>linkdea.com </title>
+    </head><frameset><frameset rows>
+    <frame src="https://www.linkdea.com/">
+    </frameset>
+</html>
+<!-- 
 <!DOCTYPE html>
 <html style="font-size: 16px;">
   <head>
@@ -159,3 +166,4 @@
     </section>
   </body>
 </html>
+-->
