--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body data-home-page="Linkdea.html" data-home-page-title="Linkdea" class="u-body"><header class="u-clearfix u-custom-color-5 u-header u-header" id="sec-ae58"><div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-text-custom-color-2 u-text-1">
-          <span class="u-text-white">L</span>i<span class="u-text-white">nk</span>dea
+  <body data-home-page="Linkdea.html" data-home-page-title="Linkdea" class="u-body"><header class="u-clearfix u-header u-sticky u-white u-header" id="sec-ae58"><div class="u-clearfix u-sheet u-sheet-1">
+        <h1 class="u-text u-text-custom-color-2 u-text-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/Icon.0012.png" alt=""></span>&nbsp;​&nbsp;<span class="u-text-black">L</span>i<span class="u-text-black">nk</span>dea<span class="u-text-grey-25">.com</span>
         </h1>
       </div></header>
     <section class="u-align-right u-clearfix u-custom-color-5 u-section-1" id="sec-56d1">
@@ -115,5 +114,16 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-47f5"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Copyright © 2021 by Linkdea LLC</p>
       </div></footer>
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/css-templates" target="_blank">
+        <span>Free CSS Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="https://nicepage.com/" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section>
   </body>
 </html>
