--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <meta property="og:url" content="index.html">
   </head>
   <body data-home-page="Linkdea.html" data-home-page-title="Linkdea" class="u-body"><header class="u-clearfix u-header u-sticky u-white u-header" id="sec-ae58"><div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-text-custom-color-2 u-text-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/Icon.0012.png" alt=""></span>&nbsp;​&nbsp;<span class="u-text-black">L</span>i<span class="u-text-black">nk</span>dea<span class="u-text-grey-25">.com</span>
+        <h1 class="u-text u-text-custom-color-2 u-text-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/Icon.0012.png" alt=""></span>
+          <span class="u-text-custom-color-6">&nbsp;​&nbsp;<span class="u-text-custom-color-5">L</span>i<span class="u-text-custom-color-5">nk</span>dea<span class="u-text-grey-40">.com</span>
+          </span>
         </h1>
       </div></header>
     <section class="u-align-right u-clearfix u-custom-color-5 u-section-1" id="sec-56d1">
@@ -95,7 +97,7 @@
             <div class="u-layout-col">
               <div class="u-size-60">
                 <div class="u-layout-row">
-                  <div class="u-align-center-md u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-xl u-container-style u-custom-color-2 u-layout-cell u-right-cell u-size-60 u-layout-cell-1">
+                  <div class="u-align-center-md u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-xl u-container-style u-custom-color-6 u-layout-cell u-right-cell u-size-60 u-layout-cell-1">
                     <div class="u-container-layout u-container-layout-1"><span class="u-icon u-icon-circle u-text-white u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 511.998 511.998" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-0dd1"></use></svg><svg class="u-svg-content" viewBox="0 0 511.998 511.998" id="svg-0dd1"><g><path d="m431.665 139.258v-122.04h-351.332v122.04l-80.333 57.38v298.142h511.998v-298.142zm-249.673 202.811-151.992 108.564v-217.128zm74.007-15.994 194.191 138.705h-388.382zm74.007 15.994 151.992-108.564v217.127zm141.185-137.712-39.526 28.232v-56.464zm-69.526-157.139v206.8l-97.466 69.618-48.2-34.428-48.2 34.428-97.466-69.618v-206.8zm-321.332 185.372-39.526-28.232 39.526-28.232z"></path><path d="m152.716 86.074h103.283v30h-103.283z"></path><path d="m152.716 154.929h206.566v30h-206.566z"></path><path d="m152.716 223.785h206.566v30h-206.566z"></path>
 </g></svg></span>
                       <h4 class="u-text u-text-body-alt-color u-text-2">email us</h4>
@@ -114,16 +116,5 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-47f5"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Copyright © 2021 by Linkdea LLC</p>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/css-templates" target="_blank">
-        <span>Free CSS Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="https://nicepage.com/" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
-    </section>
   </body>
 </html>
