--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </a>
             <div class="u-accordion-pane u-container-style u-accordion-pane-3" id="accordion-1582" aria-labelledby="link-accordion-1582">
               <div class="u-container-layout u-container-layout-3">
-                <p class="u-text u-text-default u-text-grey-40 u-text-5">Wifi/mobile/bluetooth networks are using electromagnetic wave for data transmition. However, due to the nature of electromagnetic wave, it is very hard to make the transmition to be location sensitive.<br>While, in using our acoustic-digital-communication technology, we can make the local device to be sensable if they are close to each other.
+                <p class="u-text u-text-default u-text-grey-40 u-text-5">Wifi/mobile/bluetooth networks are using electromagnetic wave for data transmission. However, due to the nature of electromagnetic wave, it would be hard and costly to make the transmition to be location sensitive.<br>While, in using our acoustic-digital-communication technology, we can make the local device to be sensable if they are close to each other.
                 </p>
               </div>
             </div>
