--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="u-accordion u-spacing-2 u-accordion-1">
           <div class="u-accordion-item">
             <a class="active u-accordion-link u-active-custom-color-5 u-border-2 u-border-active-white u-border-custom-color-5 u-border-hover-custom-color-5 u-border-no-left u-border-no-right u-border-no-top u-button-style u-custom-color-5 u-hover-custom-color-5 u-text-active-white u-text-hover-white u-text-white u-accordion-link-1" id="link-accordion-ef97" aria-controls="accordion-ef97" aria-selected="true">
-              <span class="u-accordion-link-text">How does this technologh work?</span><span class="u-accordion-link-icon u-icon u-icon-circle u-text-palette-1-base u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-badd"></use></svg><svg class="u-svg-content" viewBox="0 0 16 16" x="0px" y="0px" id="svg-badd"><path d="M8,10.7L1.6,5.3c-0.4-0.4-1-0.4-1.3,0c-0.4,0.4-0.4,0.9,0,1.3l7.2,6.1c0.1,0.1,0.4,0.2,0.6,0.2s0.4-0.1,0.6-0.2l7.1-6
+              <span class="u-accordion-link-text">How does this technology work?</span><span class="u-accordion-link-icon u-icon u-icon-circle u-text-palette-1-base u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-badd"></use></svg><svg class="u-svg-content" viewBox="0 0 16 16" x="0px" y="0px" id="svg-badd"><path d="M8,10.7L1.6,5.3c-0.4-0.4-1-0.4-1.3,0c-0.4,0.4-0.4,0.9,0,1.3l7.2,6.1c0.1,0.1,0.4,0.2,0.6,0.2s0.4-0.1,0.6-0.2l7.1-6
 	c0.4-0.4,0.4-0.9,0-1.3c-0.4-0.4-1-0.4-1.3,0L8,10.7z"></path></svg></span>
             </a>
             <div class="u-accordion-active u-accordion-pane u-container-style u-accordion-pane-1" id="accordion-ef97" aria-labelledby="link-accordion-ef97">
@@ -80,7 +80,7 @@
             </a>
             <div class="u-accordion-pane u-container-style u-accordion-pane-3" id="accordion-1582" aria-labelledby="link-accordion-1582">
               <div class="u-container-layout u-container-layout-3">
-                <p class="u-text u-text-default u-text-grey-40 u-text-5">Wifi/mobile/bluetooth networks are using electromagnetic wave for data transmission. However, due to the nature of electromagnetic wave, it would be hard and costly to make the transmition to be location sensitive.<br>While, in using our acoustic-digital-communication technology, we can make the local device to be sensable if they are close to each other.
+                <p class="u-text u-text-default u-text-grey-40 u-text-5">Wifi/mobile/bluetooth networks are using electromagnetic wave for data transmition. However, due to the nature of electromagnetic wave, it is very hard to make the transmition to be location sensitive.<br>While, in using our acoustic-digital-communication technology, we can make the local device to be sensable if they are close to each other.
                 </p>
               </div>
             </div>
